# assessment-insights

./: .pre-commit-config.yaml  LICENSE  README.md
backend/: .flake8  .pre-commit-config.yaml  pyproject.toml  requirements.txt
backend/app/: main.py
backend/src/: manage.py
backend/src/apps/academics/migrations/: 0001_initial.py
backend/src/apps/academics/models/: __init__.py  period.py  student_period_enrollment.py  term.py
backend/src/apps/grades/: apps.py
backend/src/apps/grades/migrations/: 0001_initial.py
backend/src/apps/grades/models/: __init__.py  student_grade_snapshot.py
backend/src/apps/students/migrations/: 0001_initial.py
backend/src/apps/students/models/: student.py
backend/src/apps/terms/: apps.py
backend/src/common/models/: basemodel.py
backend/src/common/utils/: date_time.py
backend/src/config/: asgi.py  wsgi.py
backend/src/config/settings/: base.py  dev.py
