[project]
name = "assessment-insights"
version = "0.1.0"
description = ""
authors = [
    {name = "Elias Gutierrez",email = "gutierrezelias1991@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.5.1,<5.0.0)"
]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313', 'py314']
include = '\.pyi?$'

[tool.isort]
profile = "google"
combine_as_imports = true
include_trailing_comma = true
line_length = 88
multi_line_output = 3
known_first_party = ["app"]
